# multi_robot_sim

./: .gitignore  LICENSE  README.md  multi-robot-sim.rosinstall
multi_robot_sim/: CMakeLists.txt  package.xml  setup.py
multi_robot_sim/ros/config/launch_config/: pre_group  robot_group
multi_robot_sim/ros/config/move_base_config/: costmap_common_params_template.yaml  global_costmap_params_template.yaml  local_costmap_params_template.yaml
multi_robot_sim/ros/config/rviz_config/: post_group_config.yaml  pre_group_config.yaml  robot_group_config.yaml
multi_robot_sim/ros/config/spawn_pose_config/: brsu_bbox.yaml  brsu_init_poses.yaml
multi_robot_sim/ros/launch/: multi_robot.launch
multi_robot_sim/ros/scripts/: generate_multi_robot_launch.py
multi_robot_sim/ros/src/multi_robot_sim/: grid_generator.py  utils.py
ropod_single_robot_sim/: CMakeLists.txt  package.xml
ropod_single_robot_sim/ros/config/: example.rviz
ropod_single_robot_sim/ros/config/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
ropod_single_robot_sim/ros/launch/: amcl.launch  move_base_dwa.launch  move_base_teb.launch  single_robot_sim.launch  spawn_single_robot.launch  start_simulation_environment.launch
