<?xml version="1.0"?>
<package format="2">
  <name>ropod_single_robot_sim</name>
  <version>0.0.0</version>
  <description>A package to simulate setup navigation for a single ROPOD simulation model</description>

  <maintainer email="gitecsvc@gmail.com">Sushant Chavan</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Sushant-Chavan/multi_robot_sim</url>

  <author email="gitecsvc@gmail.com">Sushant Chavan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ropod_sim</build_depend>
  <build_export_depend>ropod_sim</build_export_depend>
  <exec_depend>ropod_sim</exec_depend>

</package>
